#8 🛠️ feat: block used ticket detail view

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -129,6 +129,7 @@
         "usedTime": "Used Time",
         "viewTicketCode": "View Ticket Code",
         "ticketUsed": "Used",
+        "alreadyUsed": "This ticket has already been used and cannot be viewed again",
         "status": {
             "used": "Used",
             "unused": "Unused"
