#9 🎨 feat: optimize event page UI and layout - Remove date label from navigation bar - Reduce page margins and padding for better content display - Move purchase button to top row with back button - Add decorative icons to event banner - Enhance ticket purchase button with gradient and shadow effects - Clean up unused icon imports

--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -86,6 +86,7 @@
         "refreshEvents": "刷新列表",
         "eventName": "活动名称",
         "eventTime": "活动时间",
+        "eventStartTime": "开始时间",
         "eventEndTime": "结束时间",
         "eventTimeRange": "活动时间范围",
         "eventLocation": "活动地点",
